# exoshell

./: .env  .eslintrc.cjs  .gitattributes  .gitignore  .lintstagedrc.mjs  .mise.toml  .prettierignore  .rtx.toml  CONTRIBUTING.MD  Cargo.toml  LICENSE.txt  README.md  ROADMAP.md  bun.lockb  deny.toml  docker-compose.yml  package.json  tsconfig.json  turbo.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  initialize-command.sh  on-create-command.sh
.fttemplates/<FTName | pascalcase>/: .ftsettings.json  <FTName | pascalcase>.tsx  index.tsx
.github/: CODEOWNERS  pull_request_template.md  renovate.json
.github/actions/tauri-install-system-deps/: action.yml
.github/scripts/: compute-variables.mjs  computeVariables.mjs  package-lock.json  package.json  prepareRelease.mjs  utils.mjs
.github/workflows/: cicd.yaml  renovate.yml
.husky/: pre-commit
apps/chrome/: package.json
apps/chrome/public/: manifest.json
apps/chrome/scripts/: build.ts
apps/chrome/src/: content.ts  tsconfig.json
apps/cli/: Cargo.toml  package.json  turbo.json
apps/cli/src/: cli.rs  lib.rs  main.rs  prelude.rs
apps/cli/src/engine/: mod.rs  prelude.rs  run.rs
apps/desktop/: .eslintrc.json  next.config.mjs  package.json  tsconfig.json
apps/desktop/app/: ScriptEditor.tsx  ScriptList.tsx  global.css  layout.css  layout.tsx  page.tsx
apps/desktop/app/_backend/: index.ts
apps/desktop/app/_ipc/: README.md  index.ts  run.ts  script.ts
apps/desktop/app/_providers/: JotaiProvider.tsx  ReactQueryProvider.tsx  index.tsx
apps/desktop/app/_state/: dashboards.ts  events.ts  index.ts  layout.ts  query.ts  querySurreal.ts  scriptRuns.ts  scripts.ts  settings.ts  tabs.ts  workflows.ts
apps/desktop/app/_store/: README.md  database.ts  editor.ts  index.ts
apps/desktop/app/_types/: README.md  Script.ts  ScriptCreate.ts  index.ts
apps/desktop/app/_ui/: App.tsx  Editor.tsx  FormRun.tsx  Main.tsx  NavBar.tsx  NoSsr.tsx  OciLayoutBuilder.tsx  ReactFlowDevtools.tsx  ReactQueryProvider.tsx  RendererDashboard.tsx  RendererDevModeOnly.tsx  RendererSettings.tsx  RendererSurreal.tsx  RendererTerminal.tsx  RendererWorkflow.tsx  Runner.tsx  ScriptEditor.tsx  ScriptForm.tsx  ScriptList.tsx  ScriptRunList.tsx  icons.tsx
apps/desktop/app/_ui/ScriptEditor/: ScriptEditor.tsx  index.tsx
apps/desktop/app/_ui/store/: store.ts
apps/desktop/app/quickbar/: NoSsr.tsx  page.css  page.tsx
apps/desktop/src/: bindings.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  prelude.rs
apps/desktop/src-tauri/src/db/: mod.rs  prelude.rs  run.rs  script.rs
apps/desktop/src-tauri/src/engine/: mod.rs  prelude.rs  run.rs
apps/desktop/src-tauri/src/ipc/: dashboards.rs  db.rs  mod.rs  prelude.rs  run.rs  script.rs  scripts.rs  workflows.rs
apps/web/: .eslintrc.json  drizzle.config.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  turbo.json
apps/web/app/: FrontLayout.tsx  favicon.tsx  globals.css  layout.css  layout.module.css  layout.tsx  page.tsx  theme.ts
apps/web/app/_analytics/: index.tsx
apps/web/app/_db/: index.tsx  registerEmail.ts  schema.ts
apps/web/app/_ui/: Brand.tsx  ConditionalWrapper.tsx  Logo.tsx  icons.tsx
apps/web/drizzle/: 0000_unique_unicorn.sql
apps/web/drizzle/meta/: 0000_snapshot.json  _journal.json
libs/macro-model/: Cargo.toml
libs/macro-model/src/: lib.rs
libs/model/: Cargo.toml  index.ts  package.json
libs/model/macro/: Cargo.toml
libs/model/macro/src/: lib.rs
libs/model/src/: db.rs  lib.rs  prelude.rs
libs/model/src/schema/: dashboard.rs  mod.rs  script.rs  script_run.rs  workflow.rs
