[workspace]
members = [
  "apps/cli",
  "apps/desktop/src-tauri/",
  "libs/model/macro",
  "libs/model",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
# Helpers
anyhow = { version = "1.0.83" }
thiserror = { version = "1.0.60" }
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4.38" }
derive_builder = { version = "0.20.0" }

# Serialization
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117" }
serde_with = { version = "3.8.1" }
heck = { version = "0.5.0" }
shell-words = { version = "1.1.0" }
ts-rs = { version = "8.1.0", features = ["chrono-impl"] }

# Tracing
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = [
  "parking_lot",
  "tracing",
] }

# Database
surrealdb = { version = "1.3.1", features = ["kv-rocksdb", "kv-mem"] }

# Async
tokio = { version = "1.37.0", features = ["process", "sync"] }
tokio-util = { version = "0.7.11", features = ["io"] }
futures = { version = "0.3.30" }

# Macro helpers
syn = { version = "2.0.63" }
quote = { version = "1.0.36" }
proc-macro2 = { version = "1.0.82" }
darling = { version = "0.20.8" }

# Tauri
tauri = { version = "1.6.5", features = [
  "window-start-dragging",
  "process-command-api",
] }
tauri-build = { version = "1.5.2", features = [] }
