[package]
name = "model"
edition.workspace = true
version.workspace = true

[dependencies]
macro_model.path = "./macro"

# Helpers
anyhow.workspace = true
chrono.workspace = true
derive_builder.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true

# Database
surrealdb.workspace = true

[dev-dependencies]
tokio.workspace = true
