[package]
name = "app"
default-run = "app"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
specta = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tauri = { version = "1.5.4", features = ["process-command-api"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
taurpc = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
ts-rs = { workspace = true }
macro_model = { path = "../../../libs/macro-model" }
tokio-util = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
