[package]
name = "app"
default-run = "app"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true

# Helpers
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
derive_builder.workspace = true
tap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
shell-words.workspace = true
ts-rs.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Database
model = { path = "../../../libs/model" }
exoshell = { path = "../../cli" }
surrealdb.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
