[package]
name = "macro_model"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
# Serialization
heck.workspace = true

# Macro helpers
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true
